--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ajv": "^6.10.2",
     "core-js": "^3.4.3",
     "lodash": "^4.17.15",
     "vue": "^2.6.10"
