--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   },
   "dependencies": {
     "ajv": "^6.10.2",
+    "commitizen": "^4.0.3",
     "core-js": "^3.4.3",
     "lodash": "^4.17.15",
     "vue": "^2.6.10"
   },
   "devDependencies": {
+    "@cobnl/commitizen": "^1.0.1",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-e2e-cypress": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
@@ -31,5 +33,10 @@
     "eslint-plugin-vue": "^5.0.0",
     "prettier": "^1.19.1",
     "vue-template-compiler": "^2.6.10"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/@cobnl/commitizen"
+    }
   }
 }
