--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
+    "node-fetch": "^2.6.0",
     "prettier": "^1.19.1",
     "vue-template-compiler": "^2.6.10"
   },
