feat: Deploy built site to actions/ path
Issues: Related #8

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,10 +19,11 @@ phases:
   build:
     commands:
       - make dist
-    finally:
       - mv dist actions
+      # TODO: Remove, debugging
+      - ls -al
 
 artifacts:
   base-directory: actions
   files:
-    - "**/*"
+    - actions/**/*
