--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "@vue/cli-service": "^4.1.0",
     "@vue/eslint-config-prettier": "^5.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
+    "autosize": "^4.0.2",
     "babel-eslint": "^10.0.3",
+    "bulma": "^0.8.0",
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
     "node-fetch": "^2.6.0",
+    "node-sass": "^4.13.0",
     "prettier": "^1.19.1",
+    "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
   },
   "config": {
