--- a/pipeline.template
+++ b/pipeline.template
@@ -126,8 +126,7 @@ Resources:
                 Provider: CodeBuild
                 Version: "1"
               Configuration:
-                ProjectName: !Ref Project
-                AppSpecTemplatePath: invalidcachespec.yml
+                ProjectName: !Ref InvalidateCacheProject
               InputArtifacts:
                 - Name: BuildOutput
 
@@ -185,3 +184,18 @@ Resources:
       ServiceRole: !GetAtt BuildRole.Arn
       Source:
         Type: CODEPIPELINE
+
+  InvalidateCacheProject:
+    Type: AWS::CodeBuild::Project
+    Properties:
+      Artifacts:
+        Type: CODEPIPELINE
+      Environment:
+        ComputeType: BUILD_GENERAL1_SMALL
+        Image: aws/codebuild/standard:2.0
+        Type: LINUX_CONTAINER
+      Name: !Sub ${AWS::StackName}-invalidate-cache-project
+      ServiceRole: !GetAtt BuildRole.Arn
+      Source:
+        Type: CODEPIPELINE
+        BuildSpec: invalidatecachespec.yml
