fix: Include Makefile and invalidate cache spec
Issues: Fix #35

--- a/pipeline.template
+++ b/pipeline.template
@@ -128,7 +128,7 @@ Resources:
               Configuration:
                 ProjectName: !Ref InvalidateCacheProject
               InputArtifacts:
-                - Name: BuildOutput
+                - Name: SourceOutput
 
   BuildRole:
     Type: AWS::IAM::Role
